--- a/practice-JS/practice7/assets/css/style.css
+++ b/practice-JS/practice7/assets/css/style.css
@@ -3,6 +3,10 @@
 	padding: 0;
 }
 
+img {
+  width: 100%;
+}
+
 body{
 	padding-top: 60px;
 }
@@ -30,10 +34,18 @@ body{
 
 .image {
 	height: 480px;
-	width: auto;
+	width: 480px;
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .image img {
 	height: 100%;
+  width: 100%;
+  object-fit: cover;
 	display: block;
+}
+
+.slide {
+  padding-top: 60px;
 }
