--- a/practice/jquery/practice4/assets/css/style.css
+++ b/practice/jquery/practice4/assets/css/style.css
@@ -1,12 +1,21 @@
+* {
+  box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: sans-serif;
   font-weight: normal;
   font-style: normal;
   line-height: 1.2;
-}
-
-.no-overflow {
-  overflow: hidden;
+  color: #2A2A2A;
 }
 
 .main {
@@ -15,30 +24,18 @@ body {
 
 .container {
   width: 1200px;
-  padding: 0 24px;
   margin: 0 auto;
 }
 
-.team-row-list {
+.team__wrapper {
   margin-left: -24px;
   margin-right: -24px;
 }
 
-.team-row-list::after {
+.team__wrapper::after {
   content: '';
   display: table;
   clear: both;
-}
-
-img {
-  width: 100%;
-  max-width: 100%;
-  height: 100%;
-}
-
-a {
-  text-decoration: none;
-  color: #000;
 }
 
 .col-4 {
@@ -46,53 +43,58 @@ a {
   width: 25%;
 }
 
-.team-item {
+.team__item {
   overflow: hidden;
   cursor: pointer;
   margin: 0 16px 32px;
-  min-height: 280px;
+  min-height: 400px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
 
-.team-item:hover {
+.team__item:hover {
   box-shadow: 0px 2px 8px rgba(0, 0, 0, .2);
 }
 
-.team-img {
-  height: 180px;
+.team__item_img {
+  height: 300px;
   overflow: hidden;
 }
 
-.team-img img {
+.team__item_img img {
+  display: block;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   transition: all .3s ease;
 }
 
-.team-item:hover .team-img img {
+.team__item:hover .team__item_img img {
   transform: scale(1.1);
 }
 
-.team-text {
-  padding: 20px 16px;
+.team__item_txt {
+  padding: 16px;
   transition: al .3s ease;
 }
 
-.team-item:hover .team-text {
-  color: blue;
+.team__item:hover .team__item_txt {
+  color: #B96D80;
 }
 
-.team-name {
+.team__item_txt_name {
   font-size: 20px;
   margin: 0 0 8px;
 }
 
-.team-position {
-  color: blue;
+.team__item_txt_position {
+  color: #B96D80;
   margin: 0;
   font-size: 14px;
 }
 
+
+/*popup*/
 .popup-team {
   display: none;
   position: fixed;
@@ -131,7 +133,7 @@ a {
   height: 400px;
 }
 .popup-name {
-  color: blue;
+  color: #B96D80;
   font-size: 24px;
   margin: 16px 0 8px;
 }
@@ -158,7 +160,7 @@ li i {
   margin-right: 8px;
 }
 a .fa-facebook {
-  color: darkblue;
+  color: dark#B96D80;
 }
 a .fa-twitter {
   color: aqua;
